fixed horizontal spacing

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ img{
 }
 
 .background{
-  padding: 20px;
+  padding: 20px 0px 20px 0px;
   display: block;
   width: 100%;
   margin: 0;
